--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="contact.html" id="right2">Contact</a></li>
         </ul>
     </nav>
-    <div id="home">
+    <div id="home" style="background: url('public/images/img3.jpg') no-repeat center center/cover; opacity: 0.9; height: 649px;">
     </div>
     <p id="home-content">Catering</p>
     <hr>    
