--- a/contact.html
+++ b/contact.html
@@ -28,10 +28,10 @@
 
         </p>
         <h2 id="contact-sub-heading">
-            Catering Service, 42nd Living St, 43043 New York, NY
+            Catering Service, Tagarapuvalasa, Visakhapatnam
         </h2>
         <p class="contact-content">
-            You can also contact us by phone 00553123-2323 or email catering@catering.com, or you can send us a message
+            You can also contact us by phone 9876543210 or email catering@catering.com, or you can send us a message
             here:
         </p>
             <input type="text" name="name" id="name" placeholder="Name" required><br>
