updated total website
added signin and login to navbar and add sigin and login pages and changed style according to it

--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,8 @@
             <li><a href="about.html" id="right">About</a></li>
             <li><a href="menu.html" id="right1">Menu</a></li>
             <li><a href="contact.html" id="right2">Contact</a></li>
+            <li><a href="signup.html" id="right2">Signup</a></li>
+            <li><a href="login.html" id="right2">Login</a></li>
         </ul>
     </nav>
     <div id="contact">
