--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <li><a href="about.html" id="right">About</a></li>
             <li><a href="menu.html" id="right1">Menu</a></li>
             <li><a href="contact.html" id="right2">Contact</a></li>
+            <li><a href="signup.html" id="right2">Signup</a></li>
+            <li><a href="login.html" id="right2">Login</a></li>
         </ul>
     </nav>
     <div id="home" style="background: url('public/images/img3.jpg') no-repeat center center/cover; opacity: 0.9; height: 649px;">
