--- a/signup.html
+++ b/signup.html
@@ -88,7 +88,7 @@
                 });
                 console.log("the response is :::", res.status);
                 if (res.ok) {
-                    location.replace('signin.html');
+                    location.replace('login.html');
                 } else {
                     alert("Sign-up failed! Try again.");
                 }
